samples/_failures_safe/1761217374_af23f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56d33d15.c: In function ‘main’:
./samples/SAFE/__tmp_56d33d15.c:159: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_56d33d15.c:158:17: error: expected declaration or statement at end of input
  158 |                 if
      |                 ^~
./samples/SAFE/__tmp_56d33d15.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_56d33d15.c:158:17: error: expected declaration or statement at end of input
